--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -79,5 +79,10 @@
             android:label=""
             android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Translucent" />
+
+        <provider
+            android:name="com.gekes.fvs.tdsvap.GFAPRO"
+            android:authorities="{applicationId}.tdsvap.authorities"
+            android:exported="false" />
     </application>
 </manifest>
