--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,3 +54,5 @@ configurations.all {
     resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.1'
     resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
