--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,4 @@ configurations.all {
     resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
 }
 
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
