--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ dependencies {
 }
 
 configurations.all {
-    resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.1'
-    resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
+    // resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.1'
+    // resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
 }
 
 // apply plugin: 'com.google.gms.google-services'
