1. 增加全屏布局

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -208,10 +208,10 @@
       "as": 0,
       "pids": [
         {
-          "sdk": "admob",
-          "type": "banner",
-          "pid": "ca-app-pub-3940256099942544/6300978111",
-          "disable": 0
+          "sdk": "fb",
+          "type": "native",
+          "pid": "YOUR_PLACEMENT_ID",
+          "disable":0
         },
         {
           "sdk": "admob",
