--- a/app/src/main/assets/mpd6af5cf9.cfg
+++ b/app/src/main/assets/mpd6af5cf9.cfg
@@ -1,24 +1,24 @@
 {
-  "adplaces": [
+  "placements": [
     {
       "name": "banner_test",
       "type": "banner",
-      "pid": "b195f8dd8ded45fe847ad89ed1d016da"
+      "place_id": "b195f8dd8ded45fe847ad89ed1d016da"
     },
     {
       "name": "native_test",
       "type": "native",
-      "pid": "11a17b188668469fb0412708c3d16813"
+      "place_id": "11a17b188668469fb0412708c3d16813"
     },
     {
       "name": "interstitial_test",
       "type": "interstitial",
-      "pid": "24534e1901884e398f1253216226017e"
+      "place_id": "24534e1901884e398f1253216226017e"
     },
     {
       "name": "reward_test",
       "type": "reward",
-      "pid": "920b6145fb1546cf8b5cf2ac34638bb7"
+      "place_id": "920b6145fb1546cf8b5cf2ac34638bb7"
     }
   ]
 }
