1. 优化mopub原生广告适配

--- a/app/src/main/assets/mpd6af5cf9.cfg
+++ b/app/src/main/assets/mpd6af5cf9.cfg
@@ -6,9 +6,14 @@
       "place_id": "b195f8dd8ded45fe847ad89ed1d016da"
     },
     {
-      "name": "native_test",
+      "name": "native_demo_test",
       "type": "native",
-      "place_id": "11a17b188668469fb0412708c3d16813"
+      "place_id": "649a80be65a24ffda0aa8462ede88b4f"
+    },
+    {
+        "name": "native_test",
+        "type": "native",
+        "place_id": "11a17b188668469fb0412708c3d16813"
     },
     {
       "name": "interstitial_test",
