--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.github.megatronking.stringfog:xor:1.0.0'
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:percent:25.2.0'
-    implementation('com.facebook.android:audience-network-sdk:5.1.0') {
+    implementation('com.facebook.android:audience-network-sdk:5.4.0') {
         exclude group: 'com.google.android.gms'
     }
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
@@ -69,7 +69,8 @@ dependencies {
     }
     implementation 'com.mopub:mopub-sdk-interstitial:5.7.1-webeye@aar'
     implementation 'com.mopub.mediation:admob:15.0.1.0-webeye2'
-    implementation 'com.mopub.mediation:facebookaudiencenetwork:5.1.0.1-webeye@aar'
+    // implementation 'com.mopub.mediation:facebookaudiencenetwork:5.1.0.1-webeye@aar'
+    implementation 'com.mopub.mediation:facebookaudiencenetwork:5.4.0.0'
     implementation 'com.mopub.mediation:applovin:8.1.4.0'
     implementation 'com.mopub.mediation:inmobi:1.0.5'
     implementation 'com.mopub.mediation:inneractive:7.1.7.0-webeye'
