--- a/encrypt-mp.gradle
+++ b/encrypt-mp.gradle
@@ -62,7 +62,7 @@ project.afterEvaluate {
                 String adFileGenerate = String.format("adFileGenerate%s", productFlavor)
                 project.tasks.create(adFileGenerate, {
                     doLast {
-                        adFileGenerate(Flavor.name)
+                        adFileGenerateByUser(flavor.name)
                     }
                 })
             }
@@ -93,7 +93,7 @@ project.afterEvaluate {
 
         project.tasks.create("adFileGenerate", {
             doLast {
-                adFileGenerate(null)
+                adFileGenerateByUser(null)
             }
         })
     }
@@ -168,8 +168,8 @@ def getAssetsOutDir(flavor) {
  * @param flavor
  * @return
  */
-def adFileGenerate(flavor) {
-    def appId = getApplicationId(flavor)
+def adFileGenerateByUser(flavorName) {
+    def appId = getApplicationId(flavorName)
     def pkgnameMd5 = Aes.string2MD5(appId)
     def adConfigName = "mp" + pkgnameMd5.substring(0, 8) + getSuffix()
     println "generateAdFileName : " + adConfigName
