--- a/encrypt.gradle
+++ b/encrypt.gradle
@@ -66,7 +66,8 @@ project.afterEvaluate {
                     }
                 })
             }
-            def aTask = project.tasks.findByName("assembleRelease");
+            String assembleTaskName = String.format("assemble%sRelease", productFlavor)
+            def aTask = project.tasks.findByName(assembleTaskName);
             if (aTask != null) {
                 aTask.doLast {
                     openReleaseDir(flavor.name)
