--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -16,9 +16,9 @@ stringfog {
 }
 /**
  * 版本号与Activity和Provider之间的对应关系
- * versionName   ===> SunAct.java, SunPro.java
- * versionName.1 ===> FulInvAct.java, FulInvPro.java
- * versionName.2 ===> UniqueAct.java, UniquePro.java
+ * versionName   ===> Sun-Act.java, Sun-Pro.java
+ * versionName.1 ===> Ful-InvAct.java, Ful-InvPro.java
+ * versionName.2 ===> Uni-queAct.java, Uni-quePro.java
  */
 android {
     compileSdkVersion 26
