1. mopub的adchoice默认可点击

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -154,6 +154,7 @@
           "sdk": "mopub",
           "type": "native",
           "pid": "11a17b188668469fb0412708c3d16813",
+          "cv":["cta", "title", "cover"],
           "disable": 0
         },
         {
