1. 测试广告位优化

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -10,9 +10,8 @@
     {
       "name": "banner_and_native",
       "mode": "con",
-      "as": 1,
       "cc": [
-        "#FF6600",
+        "#FF660000",
         "#4455bb22"
       ],
       "pids": [
@@ -25,8 +24,8 @@
         {
           "sdk": "fb",
           "type": "banner",
-          "pid": "YOUR_PLACEMENT_ID",
-          "disable": 1
+          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
+          "disable": 0
         },
         {
           "sdk": "mopub",
@@ -38,7 +37,7 @@
           "sdk": "mopub",
           "type": "banner",
           "pid": "252412d5e9364a05ab77d9396346d73d",
-          "disable": 1
+          "disable": 0
         },
         {
           "sdk": "mopub",
@@ -50,7 +49,7 @@
           "sdk": "admob",
           "type": "banner",
           "pid": "ca-app-pub-3940256099942544/6300978111",
-          "disable": 1
+          "disable": 0
         },
         {
           "sdk": "admob",
