--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -115,24 +115,25 @@
     },
     {
       "name": "reward_video",
-      "mode": "con",
+      "mode": "ran",
+      "retry":1,
       "pids": [
         {
           "sdk": "fb",
           "type": "reward",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
+          "pid": "1VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
           "disable": 0
         },
         {
-          "sdk": "admob",
+          "sdk": "fb",
           "type": "reward",
-          "pid": "ca-app-pub-3940256099942544/5224354917",
+          "pid": "2VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
           "disable": 0
         },
         {
           "sdk": "dfp",
           "type": "reward",
-          "pid": "/6499/example/rewarded-video",
+          "pid": "/6499/example/rewarded-vide1",
           "disable": 0
         }
       ],
