--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gekes.fvs.tdsvap">
+    package="com.dock.vost.moon">
 
     <uses-sdk android:minSdkVersion="9" />
 
@@ -72,7 +72,7 @@
             android:icon="@drawable/had_tr_bg"
             android:label="" />
         <activity
-            android:name="com.gekes.fvs.tdsvap.SunAct"
+            android:name="com.dock.vost.moon.SunAct"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
             android:icon="@drawable/had_tr_bg"
