1. 增加打开release文件夹功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
-
+apply from: '../adsdk/encrypt.gradle'
+ext {
+    openRelease = true
+}
 def useProject = true;
 
 android {
