1. 重命名某些文件

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -115,7 +115,7 @@
     },
     {
       "name": "reward_video",
-      "mode": "ran",
+      "mode": "con",
       "retry":1,
       "pids": [
         {
